--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -21,7 +21,10 @@ jobs:
       max-parallel: 9
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: [
+#          "3.10",
+          "3.11"
+        ]
 
     steps:
       - uses: actions/checkout@v3
@@ -35,6 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+          pip install -e setup_selenium
 
       - name: Test with pytest
         run: |
