--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -37,9 +37,7 @@ jobs:
       - name: Install dev dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
-          pip install -e setup_selenium
+          pip install tox tox-gh-actions
 
-      - name: Test with pytest
-        run: |
-          pytest -vv
+      - name: Test with tox
+        run: tox
