--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = ["Marcel Wilson <trenchrats@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.11"
 selenium = "4.12.0"
-#webdriver-manager = "^4.0.0"
-webdriver-manager = { git = "git@github.com:SergeyPirogov/webdriver_manager.git", branch = "master"}
+webdriver-manager = "*"
+#webdriver-manager = { git = "git@github.com:SergeyPirogov/webdriver_manager.git", branch = "master"}
 semantic-version = "*"
 
 # poetry add {package} -G dev
