--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -25,6 +25,7 @@ jobs:
 #          "3.10",
           "3.11"
         ]
+        poetry-version: ["1.6.1"]
 
     steps:
       - uses: actions/checkout@v3
