no reason to remove existing packages

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -64,4 +64,4 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          poetry install --with dev --sync
+          poetry install --with dev
