--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: install chrome
         uses: browser-actions/setup-chrome@v1
-        run: chrome --version
+      - run: chrome --version
       
 #      - name: Test with tox
 #        run: tox
