using chrome for real

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: install chrome
         uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable
       - run: chrome --version
       
 #      - name: Test with tox
