--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -35,10 +35,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
       
-      - name: Install dev dependencies
+      - name: Install pip
         run: |
           python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
+#          pip install tox tox-gh-actions
 
       - name: install chrome
         uses: browser-actions/setup-chrome@v1
