--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -40,15 +40,21 @@ jobs:
           python -m pip install --upgrade pip
 #          pip install tox tox-gh-actions
 
-      - name: install chrome
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: stable
+      - name: Install browsers on Windows
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          choco install firefox googlechrome --no-progress -y --force
 
-      - name: install firefox
-        uses: browser-actions/setup-firefox@v1
-        with:
-          firefox-version: latest
+#      - name: install chrome
+#        uses: browser-actions/setup-chrome@v1
+#        with:
+#          chrome-version: stable
+#
+#      - name: install firefox
+#        uses: browser-actions/setup-firefox@v1
+#        with:
+#          firefox-version: latest
 
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
