--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -15,6 +15,8 @@ jobs:
   run-tests:
     name: Python ${{ matrix.python-version }}
     runs-on: windows-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       max-parallel: 9
       fail-fast: false
@@ -31,25 +33,22 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+#          cache: 'pip'
       
-      - name: Install pip
-        run: |
-          python -m pip install --upgrade pip
 
-# USING actions to install browser is much faster
-      - name: Install browsers on Windows
+# INSTALL BROWSERS
+      - name: Install chromium
         if: runner.os == 'Windows'
         shell: powershell
         run: |
           choco install chromium --no-progress -y --force
 
+#      - name: install chromium
+#        uses: browser-actions/setup-chrome@v1
+#        with:
+#          chrome-version: stable
+      
       - name: install chrome
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: stable
-
-      - name: install chromium
         uses: browser-actions/setup-chrome@v1
         with:
           chrome-version: stable
@@ -58,7 +57,29 @@ jobs:
         uses: browser-actions/setup-firefox@v1
         with:
           firefox-version: latest
+      
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+################################################################################
+# SETUP TEST 
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
         with:
