--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -34,17 +34,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install software-properties-common apt-transport-https wget curl
           
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb
+#          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+#          sudo dpkg -i google-chrome-stable_current_amd64.deb
           
-          wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | sudo apt-key add -
-          sudo add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main"
-          sudo apt-get update && sudo apt install microsoft-edge-beta
+#          wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | sudo apt-key add -
+#          sudo add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main"
+#          sudo apt-get update && sudo apt install microsoft-edge-beta
           
-          wget -qO- https://deb.opera.com/archive.key | sudo apt-key add -
-          sudo add-apt-repository "deb [arch=i386,amd64] https://deb.opera.com/opera-stable/ stable non-free"
-          sudo apt-get update
-          sudo apt-get -y --no-install-recommends install opera-stable
+#          wget -qO- https://deb.opera.com/archive.key | sudo apt-key add -
+#          sudo add-apt-repository "deb [arch=i386,amd64] https://deb.opera.com/opera-stable/ stable non-free"
+#          sudo apt-get update
+#          sudo apt-get -y --no-install-recommends install opera-stable
           
           sudo apt-get install chromium-browser
           
