forgot the whole command

--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -27,9 +27,10 @@ jobs:
         ]
 
     steps:
+      # installs the x86 version :(
       - name: Install chromium
         run: |
-          mtslzr/marmaduke-chromium
+          brew tap mtslzr/marmaduke-chromium
           brew update
           brew install marmaduke-chromium --no-quarantine
           /Applications/Chromium.app/Contents/MacOS/Chromium --version
