because sometimes even the lock file needs to be updated.

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -2,9 +2,9 @@ name: Linux
 
 on:
   push:
-    paths:
-      - '**.py'
-      - '**.yml'
+#    paths:
+#      - '**.py'
+#      - '**.yml'
   pull_request:
   workflow_dispatch:
 
