--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -2,9 +2,9 @@ name: MacM1
 
 on:
   push:
-    paths:
-      - '**.py'
-      - '**.yml'
+#    paths:
+#      - '**.py'
+#      - '**.yml'
   pull_request:
   workflow_dispatch:
 
