--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -2,9 +2,9 @@ name: Windows
 
 on:
   push:
-    paths:
-      - '**.py'
-      - '**.yml'
+#    paths:
+#      - '**.py'
+#      - '**.yml'
   pull_request:
   workflow_dispatch:
 
