--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ multi_line_output = 3
 include_trailing_comma = "True"
 use_parentheses = "True"
 combine_as_imports = "True"
-skip = [".idea"]
+skip = [".idea", ".tox"]
 
 
 [build-system]
