allowing all versions of selenium up to 4.12

--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -28,6 +28,7 @@ jobs:
 
     steps:
       # installs the x86 version :(
+      # xattr -cr /Applications/Chromium.app
       - name: Install chromium
         run: |
           brew tap mtslzr/marmaduke-chromium
