removing support for chromium directly and using selenium-manager to download drivers/browsers

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -27,11 +27,11 @@ jobs:
         ]
 
     steps:
-      - name: Install chromium
-        run: |
-          sudo apt-get update
-          sudo apt-get install software-properties-common apt-transport-https wget curl
-          sudo apt-get install chromium-browser
+#      - name: Install chromium
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install software-properties-common apt-transport-https wget curl
+#          sudo apt-get install chromium-browser
           
 #          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 #          sudo dpkg -i google-chrome-stable_current_amd64.deb
