--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,7 +176,8 @@ exclude = [
     ".idea",
 ]
 
-
+[tool.ruff.lint]
+extend-safe-fixes = ["TCH003"]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
