trying to run tests via tox

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -77,6 +77,9 @@ jobs:
         run: |
           poetry install --with dev
 
-      - name: Test with pytest
-        run: |
-          pytest -vv --runslow
+#      - name: Test with pytest
+#        run: |
+#          pytest -vv --runslow
+
+      - name: Test with tox
+        run: tox -- --runslow
