--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -78,6 +78,9 @@ jobs:
         run: |
           poetry install --with dev
 
-      - name: Test with pytest
-        run: |
-          pytest -vv --runslow
+#      - name: Test with pytest
+#        run: |
+#          pytest -vv --runslow
+
+      - name: Test with tox
+        run: tox -- --runslow
