--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -63,24 +63,30 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
-      - name: Setup Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: "1.6.1"
-
-      - name: Configure Poetry
-        shell: bash
-        run: poetry config virtualenvs.create false
-
-      - name: Install dependencies
-        shell: bash
-        run: |
-          poetry install --with dev
+#      - name: Setup Poetry
+#        uses: abatilo/actions-poetry@v2
+#        with:
+#          poetry-version: "1.6.1"
+#
+#      - name: Configure Poetry
+#        shell: bash
+#        run: poetry config virtualenvs.create false
+#
+#      - name: Install dependencies
+#        shell: bash
+#        run: |
+#          poetry install --with dev
 
 #      - name: Test with pytest
 #        run: |
 #          pytest -vv --runslow
+
+      - name: Install dev dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
 
       - name: Test with tox
         run: tox -- --runslow
