--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,18 +9,34 @@ authors = ["Marcel Wilson <trenchrats@gmail.com>"]
 python = "^3.10"
 selenium = ">=4.7.0"
 semantic-version = "*"
+# extras
+pytest = {version="*", optional = true}
+coverage = {version="*", optional = true}
+flake8 = {version="*", optional = true}
+black = {version="*", optional = true}
+mypy = {version="*", optional = true}
+pylint = {version="*", optional = true}
+setuptools = {version="*", optional = true}
+ruff = {version="*", optional = true}
+tox = {version="*", optional = true}
 
-# poetry add {package} -G dev
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
-coverage = "*"
-flake8 = "*"
-black = "*"
-mypy = "*"
-pylint = "*"
-setuptools = "*"
-ruff = "*"
-tox = "*"
+
+[tool.poetry.extras]
+dev = [
+    "pytest",
+    "coverage",
+    "flake8",
+    "black",
+    "mypy",
+    "pylint",
+    "setuptools",
+    "ruff",
+    "tox",
+]
+test = [
+    "pytest",
+    "tox",
+]
 
 
 [tool.isort]
