--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 norecursedirs = .pytest_cache 
 
-python_files = *.py
-;python_files = t*.py 
+;python_files = *.py
+python_files = t*.py 
 ; using *.py  is BROKEN in python 3.10.  
 
 
@@ -10,7 +10,7 @@ addopts =
     --show-capture=no
     --capture=no
     --tb=native
-;    --showlocalså
+;    --showlocals
     --verbosity=0
     -rA
     --color=yes
@@ -18,7 +18,11 @@ addopts =
     -m "not xfail"
 
 ;log_cli = on
-log_cli_level = INFO
-log_cli_format = %(message)s
+log_cli_level = DEBUG
+;log_cli_format = %(message)s
+log_cli_format = %(levelname)-5s %(name)-7s  %(message)s
 ;log_cli_format = %(name)-7s %(levelname)-5s %(filename)35s:%(lineno)-4s %(message)s
 ;log_cli_format = %(levelname)-5s %(filename)20s:%(lineno)-4s %(message)s
+
+markers:
+    slow: mark test as slow to run
