--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -27,19 +27,6 @@ jobs:
         ]
 
     steps:
-      - name: Install chromium
-        run: |
-          sudo apt-get update
-          sudo apt-get install software-properties-common apt-transport-https wget curl
-          sudo apt-get install chromium-browser
-          
-#          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-#          sudo dpkg -i google-chrome-stable_current_amd64.deb
-
-#          wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | sudo apt-key add -
-#          sudo add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main"
-#          sudo apt-get update && sudo apt install microsoft-edge-beta
-
       - name: install chrome
         uses: browser-actions/setup-chrome@v1
         with:
@@ -62,21 +49,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
-      - name: Setup Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: "1.6.1"
-
-      - name: Configure Poetry
-        shell: bash
-        run: poetry config virtualenvs.create false
-
-      - name: Install dependencies
-        shell: bash
+      - name: Install dev dependencies
         run: |
-          poetry install --with dev
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
 
-      - name: Test with pytest
-        run: |
-          pytest -vv
+      - name: Test with tox
+        run: tox -- --runslow
