--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -27,11 +27,6 @@ jobs:
         ]
 
     steps:
-      - name: Install chromium
-        shell: powershell
-        run: |
-          choco install chromium --no-progress -y --force
-
       - name: install chrome
         uses: browser-actions/setup-chrome@v1
         with:
@@ -47,14 +42,6 @@ jobs:
 
 
 
-
-
-
-
-
-
-
-
 ################################################################################
 # SETUP TEST 
       - uses: actions/checkout@v3
@@ -62,21 +49,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
-      - name: Setup Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: "1.6.1"
-
-      - name: Configure Poetry
-        shell: bash
-        run: poetry config virtualenvs.create false
-
-      - name: Install dependencies
-        shell: bash
+      - name: Install dev dependencies
         run: |
-          poetry install --with dev
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
 
-      - name: Test with pytest
-        run: |
-          pytest -vv
+      - name: Test with tox
+        run: tox -- --runslow
