--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -17,7 +17,7 @@ addopts =
 ;    --disable-warnings
     -m "not xfail"
 
-;log_cli = on
+log_cli = on
 log_cli_level = DEBUG
 ;log_cli_format = %(message)s
 log_cli_format = %(levelname)-5s %(name)-7s  %(message)s
