--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -36,7 +36,12 @@ jobs:
         uses: browser-actions/setup-firefox@v1
         with:
           firefox-version: latest
-      
+
+      - name: remove native drivers
+        run: |
+          rm /usr/local/bin/chromedriver
+          rm /usr/local/bin/geckodriver
+          rm /usr/local/bin/msedgedriver
 
 
 
