removing drivers from windows path

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -38,7 +38,12 @@ jobs:
           firefox-version: latest
       
       - name: remove native drivers
-        run: rmdir /s C:\SeleniumWebDrivers
+        run: rmdir SeleniumWebDrivers /s
+
+
+
+
+
 
 
 
