windows command changed

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -38,7 +38,7 @@ jobs:
           firefox-version: latest
       
       - name: remove native drivers
-        run: rmdir SeleniumWebDrivers /s
+        run: rd SeleniumWebDrivers /s
 
 
 
