need to provide full path to drivers in windows

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -38,7 +38,7 @@ jobs:
           firefox-version: latest
       
       - name: remove native drivers
-        run: rd SeleniumWebDrivers -Force -Recurse
+        run: rd C:\SeleniumWebDrivers -Force -Recurse
 
 
 
