--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -42,6 +42,12 @@ jobs:
         with:
           edge-version: stable
 
+      - name: remove native drivers
+        run: |
+          sudo rm /usr/bin/chromedriver
+          sudo rm /usr/bin/geckodriver
+          sudo rm /usr/bin/msedgedriver
+
 ################################################################################
 # SETUP TEST 
       - uses: actions/checkout@v3
@@ -57,4 +63,4 @@ jobs:
           pip install tox tox-gh-actions
 
       - name: Test with tox
-        run: tox -- --runslow
+        run: tox
