--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -21,10 +21,7 @@ jobs:
       max-parallel: 9
       fail-fast: false
       matrix:
-        python-version: [
-          "3.10",
-          "3.11"
-        ]
+        python-version: ["3.8","3.9","3.10","3.11"]
 
     steps:
       - name: install chrome
