--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,15 @@
 [tox]
 envlist =
+    python3.8
+    python3.9
     python3.10
     python3.11
 isolated_build = True
 
 [gh-actions]
 python =
+    3.8: py38
+    3.9: py39
     3.10: python3.10
     3.11: py311
 
