--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -20,7 +20,8 @@ addopts =
 log_cli = on
 log_cli_level = DEBUG
 ;log_cli_format = %(message)s
-log_cli_format = %(levelname)-5s %(name)-7s  %(message)s
+;log_cli_format = %(levelname)-5s %(name)-7s  %(message)s
+log_cli_format = %(levelname)-5s %(message)s
 ;log_cli_format = %(name)-7s %(levelname)-5s %(filename)35s:%(lineno)-4s %(message)s
 ;log_cli_format = %(levelname)-5s %(filename)20s:%(lineno)-4s %(message)s
 
