--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -17,7 +17,8 @@ addopts =
 ;    --disable-warnings
     -m "not xfail"
 
-log_cli = on
+;log_cli = on
+; level MUST be DEBUG or one of the tests will fail!!
 log_cli_level = DEBUG
 ;log_cli_format = %(message)s
 ;log_cli_format = %(levelname)-5s %(name)-7s  %(message)s
