--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,6 +162,7 @@ ignore = [
     "PLR2004", # magic-value-comparison
 
     # 3.8 & 3.9 compatibility
+    "UP007", # Use `X | Y` for type annotations
     "UP035", # Import from `typing` instead: `TypeAlias`
     "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
 ]
