--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,21 @@ name = "setup_selenium"
 version = "0.1.0"
 description = "Setup Selenium for automation testing"
 authors = ["Marcel Wilson <trenchrats@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/bandophahita/setup_selenium"
+#documentation = ""
+readme = "README.md"
+classifiers = [
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+]
 
 
 [tool.poetry.dependencies]
