proper formatting of packages config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Natural Language :: English",
 ]
-packages = {include = "setup_selenium"}
+packages = [{include = "setup_selenium"}]
 
 
 [tool.poetry.dependencies]
