--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,8 @@ typing-extensions = "*"
 pytest = {version="*", optional = true}
 black = {version="*", optional = true}
 mypy = {version="*", optional = true}
-ruff = {version="*", optional = true}
+ruff = {version = ">=0.2.0", optional = true}
 tox = {version="*", optional = true}
-isort = {version = "*", optional = true}
 
 [tool.poetry.extras]
 dev = [
@@ -41,22 +40,12 @@ dev = [
     "black",
     "mypy",
     "ruff",
-    "isort",
     "tox",
 ]
 test = [
     "pytest",
     "tox",
 ]
-
-
-[tool.isort]
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = "True"
-use_parentheses = "True"
-combine_as_imports = "True"
-skip = [".idea", ".tox"]
 
 
 [build-system]
@@ -77,9 +66,36 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.ruff]
-# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
+target-version = "py38"
+line-length = 88
+extend-exclude = [
+    ".github",
+    ".pytest_cache",
+    ".venv",
+    "venv",
+    "dockerfiles",
+    "docs",
+    ".coverage",
+    ".coveragerc",
+    ".env",
+    ".env.example",
+    ".flake8",
+    ".gitignore",
+    "alembic.ini",
+    "bandit.yaml",
+    "docker-compose-dev.yaml",
+    "docker-compose-pro.yaml",
+    "Makefile",
+    "mkdocks.yml",
+    "mypy.ini",
+    "poetry.lock",
+    "pyproject.toml",
+    "pytest.ini",
+    "README.md",
+    ".idea",
+]
+
+[tool.ruff.lint]
 select = [
     "A",  # flake8-builtins
     "ANN",  # flake8-annotations  # coming back to this one later to compare against mypy
@@ -163,43 +179,9 @@ ignore = [
     "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
 ]
 
-# Same as Black.
-line-length = 88
-target-version = "py310"
-
-exclude = [
-    ".github",
-    ".pytest_cache",
-    ".venv",
-    "venv",
-    "dockerfiles",
-    "docs",
-    ".coverage",
-    ".coveragerc",
-    ".env",
-    ".env.example",
-    ".flake8",
-    ".gitignore",
-    "alembic.ini",
-    "bandit.yaml",
-    "docker-compose-dev.yaml",
-    "docker-compose-pro.yaml",
-    "Makefile",
-    "mkdocks.yml",
-    "mypy.ini",
-    "poetry.lock",
-    "pyproject.toml",
-    "pytest.ini",
-    "README.md",
-    ".idea",
-]
-
-[tool.ruff.lint]
 extend-safe-fixes = [
-    "EM101",
-    "EM102",
+    "EM101", "EM102",
     "TCH001", "TCH002", "TCH003", "TCH004",
-    #    "SIM108"
     "C419",
     "D200", "D205",
     "PT003", "PT006", "PT018",
@@ -207,28 +189,24 @@ extend-safe-fixes = [
     "UP007",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.flake8-pytest-style]
+mark-parentheses = false
+
+[tool.ruff.lint.pycodestyle]
+ignore-overlong-task-comments = true
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+split-on-trailing-comma = false
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**" = [
     "D",  # we don't need public-API-polished docstrings in tests.
     "FBT",  # using a boolean as a test object is useful!
     "PLR",  # likewise using specific numbers and strings in tests.
 ]
-
-[tool.ruff.isort]
-combine-as-imports = true
-split-on-trailing-comma = true
-
-
-[tool.ruff.flake8-pytest-style]
-mark-parentheses = false
-
-
-[tool.ruff.pycodestyle]
-ignore-overlong-task-comments = true
-
-
-[tool.ruff.flake8-annotations]
+[tool.ruff.lint.flake8-annotations]
 # ignore returns types for functions that implicity or explicitly only return None
 suppress-none-returning = true
 allow-star-arg-any = true
