--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -36,9 +36,12 @@ jobs:
 
       - name: remove native drivers
         run: |
-          rm /usr/local/bin/chromedriver
-          rm /usr/local/bin/geckodriver
-          rm /usr/local/bin/msedgedriver
+          rm /usr/local/share/chromedriver-mac-arm64
+          rm /usr/local/share/geckodriver
+          rm /usr/local/share/msedgedriver
+#          rm /usr/local/bin/chromedriver
+#          rm /usr/local/bin/geckodriver
+#          rm /usr/local/bin/msedgedriver
 
 
 
