--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -14,7 +14,8 @@ permissions:
 jobs:
   run-tests:
     name: Python ${{ matrix.python-version }}
-    runs-on: macos-latest
+#    runs-on: macos-latest
+    runs-on: macos-13-xlarge
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
@@ -34,15 +35,9 @@ jobs:
         with:
           firefox-version: latest
 
-      - name: setup edge
-        uses: browser-actions/setup-edge@v1.1.1
-        with:
-            edge-version: stable
-
       - name: remove native drivers
         run: |
           rm /usr/local/share/chromedriver-mac-arm64/chromedriver
-
 
 
 
