--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ extend-exclude = [
     "README.md",
     ".idea",
 ]
+output-format = "concise"
 
 [tool.ruff.lint]
 select = [
@@ -136,8 +137,6 @@ select = [
 #    "FURB", # refurb  # needs --preview flag to run
 ]
 ignore = [
-    "ANN101",  # missing-type-self
-    "ANN102",  # cls 
     "E501",   # line too long -- black will take care of this for us
     "SIM115", # use context handler for open -- situationally useful
 #    "SIM300", # yoda conditions -- meh
