we still want xfail tests to run

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -15,7 +15,7 @@ addopts =
     -rA
     --color=yes
 ;    --disable-warnings
-    -m "not xfail"
+;    -m "not xfail"
 
 log_cli = on
 ; level MUST be DEBUG or one of the tests will fail!!
