--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Lint
 
 on:
-  push:
+#  push:
   pull_request:
   workflow_dispatch:
 
@@ -46,7 +46,7 @@ jobs:
 
       - name: Lint with ruff
         run: |
-          ruff .
+          ruff check .
 
       - name: Lint with mypy
         run: |
