--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -1,7 +1,7 @@
 name: Linux
 
 on:
-  push:
+#  push:
 #    paths:
 #      - '**.py'
 #      - '**.yml'
@@ -35,9 +35,11 @@ jobs:
           firefox-version: latest
       
       - name: setup edge
-        uses: browser-actions/setup-edge@v1
-        with:
-          edge-version: stable
+#        uses: browser-actions/setup-edge@v1.1.1
+#        with:
+#          edge-version: stable
+        # temp work around - https://github.com/browser-actions/setup-edge/issues/516
+        run: curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft-archive-keyring.gpg && sudo mv microsoft-archive-keyring.gpg /usr/share/keyrings/ && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft-archive-keyring.gpg] https://packages.microsoft.com/repos/edge stable main" | sudo tee /etc/apt/sources.list.d/microsoft-edge-stable.list && sudo apt update && sudo apt install -y microsoft-edge-stable
 
       - name: remove native drivers
         run: |
