--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "setup-selenium-testing"
-version = "1.0.1"
+version = "1.0.2"
 description = "Setup Selenium for automation testing"
 authors = ["Marcel Wilson <trenchrats+pypi@gmail.com>"]
 license = "MIT"
@@ -98,54 +98,21 @@ output-format = "concise"
 
 [tool.ruff.lint]
 select = [
-    "A",  # flake8-builtins
-    "ANN",  # flake8-annotations  # coming back to this one later to compare against mypy
-    "ARG",  # flake8-unused-arguments
-    "B",  # flake8-bugbear
-    "BLE",  # flake8-blind-except
-    "C4",  # flake8-comprehensions
-    "D",  # pydocstyle
-    "E",  # pycodestyle error
-    "EM",  # flake8-errmsg
-    "ERA",  # eradicate
-    "F",  # Pyflakes
-    "FA",  # flake8-future-annotations
-#    "FBT",  # flake8-boolean-trap
-    "FIX",  # flake8-fixme
-    "FLY",  # flynt
-    "I",  # isort
-    "ICN",  # flake8-import-conventions
-    "ISC",  # flake8-implicit-str-concat
-    "PGH",  # pygrep-hooks
-    "PIE",  # flake8-pie
-    "PL",  # pylint
-    "PT",  # flake8-pytest-style
-    "Q",  # flake8-quotes
-    "RET",  # flake8-return
-    "RSE",  # flake8-raise
-    "RUF",  # ruff specific
-    "SIM",  # flake8-simplify
-    "T10",  # flake8-debugger
-    "TCH",  # flake8-type-checking
-    "TD",  #TODOs
-    "TRY",  # tryceratops
-    "UP",  # python upgrade
-    "W",  # pycodestyle warning
-    "YTT",  # flake8-2020
-
-    # may eventually use but for now these are not helpful
-#    "FURB", # refurb  # needs --preview flag to run
+    "ALL",
 ]
 ignore = [
-    "E501",   # line too long -- black will take care of this for us
-    "SIM115", # use context handler for open -- situationally useful
-#    "SIM300", # yoda conditions -- meh
-
-    "PERF203", # `try`-`except` within a loop incurs performance overhead
-    "PERF401", # use list comp
-
+    "C90", # mccabe
+    "FBT",  # flake8-boolean-trap
+    "G", # flake8-logging-format
+    "N", # pep8 naming -- dear lord, leave this off
+    "PTH", # flake8-use-pathlib (unclear if we NEED to do this) 
+    "SLF", # flake8-self (accessing private members)
+    
     # NOT OPTIONAL. MUST REMAIN AS SET
     # these are all completely unnecessary 
+    "B028", # No explicit `stacklevel` keyword argument found in logging
+    "COM812",  # missing trailing comma
+    "D100", # Missing docstring in public module
     "D101", # Missing docstring in public class
     "D104", # Missing docstring in public package
     "D105", # Missing docstring in magic method
@@ -163,29 +130,40 @@ ignore = [
     "D406", # Section name should end with a newline 
     "D407", # Missing dashed underline after section
     "D411", # Missing blank line before section
-    "D412", # No blank lines allowed between a section header and its content 
+    "D412", # No blank lines allowed between a section header and its content
     "D415", # First line should end with punctuation
-
+    "E501",   # line too long -- black will take care of this for us
+    "PERF203", # `try`-`except` within a loop incurs performance overhead
     "PLC0414", # useless-import-alias
     "PLR0911", # too-many-return-statements
     "PLR0912", # too-many-branches
     "PLR0913", # too-many-arguments
     "PLR0915", # too-many-statements
+    "S101", # use of assert
+    "TC006",  # cast wants str for types (blech!)
 
-    # 3.8 & 3.9 compatibility
-    "UP007", # Use `X | Y` for type annotations
-    "UP035", # Import from `typing` instead: `TypeAlias`
+    # 3.9 compatibility
     "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
 ]
 
 extend-safe-fixes = [
-    "EM101", "EM102",
-    "TCH001", "TCH002", "TCH003", "TCH004",
+    "ANN201", "ANN202", "ANN204",
+    "B011",
     "C419",
-    "D200", "D205",
+    "E711", # Comparison to `None` should be `cond is None`
+    "EM101", "EM102",
+    "PLR1714",
     "PT003", "PT006", "PT018",
     "RET504",
+    "RSE102",
+    "SIM102", "SIM103", "SIM105", "SIM108", "SIM110",
+    "TCH001", "TCH002", "TCH003", "TCH004",
+    "TID252", #absolute import over relative
+    "TRY400",
     "UP007",
+    "UP040",
+    "W291",
+
 ]
 
 [tool.ruff.lint.flake8-pytest-style]
@@ -204,6 +182,7 @@ split-on-trailing-comma = false
     "D",  # we don't need public-API-polished docstrings in tests.
     "FBT",  # using a boolean as a test object is useful!
     "PLR",  # likewise using specific numbers and strings in tests.
+    "INP001",  # implicit namespace package
 ]
 [tool.ruff.lint.flake8-annotations]
 # ignore returns types for functions that implicity or explicitly only return None
