--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -46,6 +46,7 @@ jobs:
       - name: remove native drivers
         run: |
           rm /usr/local/share/chromedriver-mac-arm64/chromedriver
+          rm /opt/homebrew/bin/geckodriver
 
 ################################################################################
 # SETUP TEST 
