--- a/pyproject.toml
+++ b/pyproject.toml
@@ -180,6 +180,7 @@ split-on-trailing-comma = false
     "FBT",  # using a boolean as a test object is useful!
     "PLR",  # likewise using specific numbers and strings in tests.
     "INP001",  # implicit namespace package
+    "RUF059",  # unpacked variable not used
 ]
 [tool.ruff.lint.flake8-annotations]
 # ignore returns types for functions that implicity or explicitly only return None
