mac github image appears to pre-load msedgedriver now

--- a/.github/workflows/test-mac-m1.yml
+++ b/.github/workflows/test-mac-m1.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           rm /usr/local/share/chromedriver-mac-arm64/chromedriver
           rm /opt/homebrew/bin/geckodriver
+          rm /usr/local/bin/msedgedriver
 
 ################################################################################
 # SETUP TEST 
