--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,9 +141,6 @@ ignore = [
     "PLR0915", # too-many-statements
     "S101", # use of assert
     "TC006",  # cast wants str for types (blech!)
-
-    # 3.9 compatibility
-    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
 ]
 
 extend-safe-fixes = [
@@ -183,6 +180,7 @@ split-on-trailing-comma = false
     "FBT",  # using a boolean as a test object is useful!
     "PLR",  # likewise using specific numbers and strings in tests.
     "INP001",  # implicit namespace package
+    "RUF059",  # unpacked variable not used
 ]
 [tool.ruff.lint.flake8-annotations]
 # ignore returns types for functions that implicity or explicitly only return None
